remove redundant part & init composer project

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Inertia adapter for Kotchasan",
     "type": "library",
     "license": "mit",
+    "version": "0.0.1",
     "autoload": {
         "psr-4": {
             "InertiaKotchasan\\": "src/"
