fix for kotchasan

--- a/example/with_composer/composer.json
+++ b/example/with_composer/composer.json
@@ -28,6 +28,6 @@
         }
     ],
     "scripts": {
-        "dev": "php -S localhost:8000 src/index.php"
+        "dev": "php -S localhost:8000 index.php"
     }
 }
