More example - fuck with composer

--- a/example/with_composer/composer.json
+++ b/example/with_composer/composer.json
@@ -29,5 +29,8 @@
     ],
     "scripts": {
         "dev": "php -S localhost:8000 index.php"
+    },
+    "config": {
+        "process-timeout": 0
     }
 }
